Co-authored-by: N1njaflam1ng0 <N1njaflam1ng0@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <button class="dropbtn">1. sal </button>
             <div class="dropdown-content">
               <a href="toget.html">Tog</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="hujl.html">Tog hujl </a>
+              <a href="skovsten.html">Tog skorsten</a>
             </div>
         </div> 
         <div class="dropdown">
