--- a/skovsten.html
+++ b/skovsten.html
@@ -9,12 +9,32 @@
     <!-- Her laver vi top navigation baren -->
     <div class="navbar">
         <a href="index.html">HTX Roskilde Tekniske Museum</a>
-        <a href="toget.html">Toget</a>
-        <a href="hujl.html">Hjul</a>
-        <a href="skovsten.html">Skorsten</a>
+        <div class="dropdown">
+            <button class="dropbtn">1. sal </button>
+            <div class="dropdown-content">
+              <a href="toget.html">Tog</a>
+              <a href="hujl.html">Tog hjul </a>
+              <a href="skovsten.html">Tog skorsten</a>
+            </div>
+        </div> 
+        <div class="dropdown">
+            <button class="dropbtn">2. sal </button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+        </div> 
+        <div class="dropdown">
+            <button class="dropbtn">3. sal </button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+        </div> 
     </div>
-    <!-- Title -->
-    <h1>HTX Roskilde Tekniske Museum</h1>
+
     <!-- Texten der skal stå -->
     <div id="content">
         <h2>Tog Skorsten</h2>
