--- a/skovsten.html
+++ b/skovsten.html
@@ -64,7 +64,7 @@
     </div>
         <!-- 3d modelen -->
         <div id="Model3D">
-            <model-viewer src="FBXToppen.glb" alt="3D Model of a train" auto-rotate camera-controls auto-rotate-delay="1000"></model-viewer>
+            <model-viewer src="FBXToppen2.glb" alt="3D Model of a train" auto-rotate camera-controls auto-rotate-delay="1000"></model-viewer>
         </div>
 
 </body>
