--- a/skovsten.html
+++ b/skovsten.html
@@ -14,7 +14,7 @@
             <div class="dropdown-content">
               <a href="toget.html">Tog</a>
               <a href="hujl.html">Tog hjul </a>
-              <a href="skovsten.html">Tog skorsten</a>
+              <a href="skovsten.html">Tog-skorsten</a>
             </div>
         </div> 
         <div class="dropdown">
@@ -37,7 +37,7 @@
 
     <!-- Texten der skal stå -->
     <div id="content">
-        <h2>Tog Skorsten</h2>
+        <h2>Tog-skorsten</h2>
         <p class="p"> 
 
             Opvarmning af vandet til damp sker i kedlen, som er den lange cylinder der udgør den største del af lokomotivet.
