--- a/toget.html
+++ b/toget.html
@@ -14,7 +14,7 @@
             <div class="dropdown-content">
               <a href="toget.html">Tog</a>
               <a href="hujl.html">Tog hjul </a>
-              <a href="skovsten.html">Tog skorsten</a>
+              <a href="skovsten.html">Tog-skorsten</a>
             </div>
         </div> 
         <div class="dropdown">
@@ -37,7 +37,7 @@
 
     <!-- Texten der skal stå -->
     <div id="content">
-        <h2>Damplogomativ </h2>
+        <h2>Damplokomotiv </h2>
         <p class="p"> 
             Det første damplokomotiv blev bygget af Richard Trevithick, og kørte første gang i England
             den 21. februar 1804, det tog dog nogle år inden damplokomotiver var effektive
