--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="dropbtn">1. sal </button>
             <div class="dropdown-content">
               <a href="toget.html">Tog</a>
-              <a href="hujl.html">Tog hujl </a>
+              <a href="hujl.html">Tog hjul </a>
               <a href="skovsten.html">Tog skorsten</a>
             </div>
         </div> 
@@ -50,7 +50,7 @@
         <div class="navbar">
             <a href="toget.html">Toget</a>
             <a href="hujl.html">Hjul</a>
-            <a href="skovsten.html">Skorsten</a>
+            <a href="skovsten.html">Tog-skorsten</a>
         </div>
     </div>
         <!-- 3d modelen -->
